Stripe: ApplePay/Payment Request Button (#988)
As discussed, this is a WIP for integrating Stripe's Payment Request Buttons (with also includes the ApplePay-Button on iOS-devices).

Todos:
- [x] Payment Request Button is still displayed, even when a card has already been tokenized (when going back in the order-flow)
- [x] The domains used need to be verified using the Stripe API to enable ApplePay: https://stripe.com/docs/stripe-js/elements/payment-request-button#verifying-your-domain-with-apple-pay
- [x] Migration: Get the account-country for existing Stripe Connect users
- [x] Migration: Verify the domains using the above mentioned API for existing users
- [x] Converting the chargeable amount is not right for non-decimal currencies like JPY

Other considerations:
- On iOS-devices using Safari (probably also on MacBooks, etc. - not tested), the [regular payment request button](https://user-images.githubusercontent.com/157270/38515749-f53f8392-3be9-11e8-8917-61ef78dd354a.png) is automatically replaced with a [buy with Apple Pay button](https://docs-assets.developer.apple.com/published/094d0eb90e/988c36a8-a43c-4ff9-85ef-beda16c4b7c9.png).
- On all other platforms, the generic payment request button is displayed. Even if the device supports a specific payment provider like Google Pay, Microsoft Wallet, Samsung Pay, etc., the generic button will first offer the cards saved within the webbrowser in addition to the other payment methods. Only upon selecting the specific payment provider like GPay, the corresponding payment flow is started.
- Right now, the rendering of the payment button is completely in the hands of Stripe. Once pretix takes on the task of doing this, we should try to detect if the browser supports well known payment methods like GPay in addition to the browser-saved cards. If that's the case, we should add the corresponding marks onto the "Pay Now"-Button (like [this](https://developers.google.com/pay/api/images/brand-guidelines/google-pay-

--- a/src/pretix/plugins/stripe/templates/pretixplugins/stripe/checkout_payment_form.html
+++ b/src/pretix/plugins/stripe/templates/pretixplugins/stripe/checkout_payment_form.html
@@ -30,20 +30,39 @@
         </div>
     {% endif %}
 
-    <div id="stripe-card" class="form-control">
-        <span class="fa fa-spinner fa-spin"></span>
-        <!-- a Stripe Element will be inserted here. -->
+    <div class="row equal" id="stripe-elements">
+      <div class="col-md-5 vcenter hidden">
+        <div id="stripe-payment-request-button">
+          <span class="fa fa-spinner fa-spin"></span>
+          <!-- A Stripe Element will be inserted here. -->
+        </div>
+      </div>
+      <div class="col-md-1 hidden">
+        <div class="hr">
+          <div class="sep">
+            <div class="sepText">{% trans "OR" %}</div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-5 vcenter">
+        <div id="stripe-card" class="form-control">
+          <span class="fa fa-spinner fa-spin"></span>
+          <!-- a Stripe Element will be inserted here. -->
+        </div>
+      </div>
     </div>
+
     <p class="help-block">
         {% blocktrans trimmed %}
             Your payment will be processed by Stripe, Inc. Your credit card data will be transmitted directly to
             Stripe and never touches our servers.
         {% endblocktrans %}
+        <input type="hidden" name="stripe_total" value="{{ total }}" id="stripe_total"/>
         <input type="hidden" name="stripe_token" value="{{ request.session.payment_stripe_token }}" id="stripe_token"/>
         <input type="hidden" name="stripe_card_last4" value="{{ request.session.payment_stripe_last4 }}"
                 id="stripe_card_last4"/>
         <input type="hidden" name="stripe_card_brand" value="{{ request.session.payment_stripe_brand }}"
                 id="stripe_card_brand"/>
+        <input type="hidden" id="stripe_currency" value="{{ event.currency }}"/>
     </p>
 </div>
-
