--- a/src/pretix/plugins/stripe/templates/pretixplugins/stripe/presale_head.html
+++ b/src/pretix/plugins/stripe/templates/pretixplugins/stripe/presale_head.html
@@ -5,9 +5,15 @@
 {% compress js %}
     <script type="text/javascript" src="{% static "pretixplugins/stripe/pretix-stripe.js" %}"></script>
 {% endcompress %}
+{% compress css %}
+    <link type="text/css" rel="stylesheet" href="{% static "pretixplugins/stripe/pretix-stripe.css" %}">
+{% endcompress %}
 {% if settings.endpoint == "test" and settings.publishable_test_key %}
     <script type="text/plain" id="stripe_pubkey">{{ settings.publishable_test_key }}</script>
 {% else %}
     <script type="text/plain" id="stripe_pubkey">{{ settings.publishable_key }}</script>
 {% endif %}
-
+{% if settings.connect_user_id %}
+    <script type="text/plain" id="stripe_connectedAccountId">{{ settings.connect_user_id }}</script>
+{% endif %}
+    <script type="text/plain" id="stripe_merchantcountry">{{ settings.merchant_country|default:"" }}</script>
