--- a/src/pretix/presale/templates/pretixpresale/event/fragment_cart.html
+++ b/src/pretix/presale/templates/pretixpresale/event/fragment_cart.html
@@ -63,7 +63,7 @@
                         <a href="{% eventurl event "presale:event.order.download" secret=order.secret order=order.code output=b.identifier position=line.id %}"
                                 class="btn btn-sm {% if b.identifier == "pdf" %}btn-primary{% else %}btn-default{% endif %}"
                                 data-asyncdownload>
-                            <span class="fa fa-download"></span> {{ b.text }}
+                            <span class="fa {{ b.icon }}"></span> {{ b.text }}
                         </a>
                     {% endfor %}
                 {% endif %}
@@ -150,7 +150,7 @@
                         <a href="{% eventurl event "presale:event.order.download" secret=order.secret order=order.code output=b.identifier position=line.id %}"
                            class="btn btn-sm {% if b.identifier == "pdf" %}btn-primary{% else %}btn-default{% endif %}"
                                 data-asyncdownload>
-                            <span class="fa fa-download"></span> {{ b.text }}
+                            <span class="fa {{ b.icon }}"></span> {{ b.text }}
                         </a>
                     {% endfor %}
                 {% endif %}
