--- a/src/pretix/presale/templates/pretixpresale/event/order.html
+++ b/src/pretix/presale/templates/pretixpresale/event/order.html
@@ -99,7 +99,7 @@
                             <a href="{% eventurl event "presale:event.order.download.combined" secret=order.secret order=order.code output=b.identifier %}"
                                     class="btn btn-sm {% if b.identifier == "pdf" %}btn-primary{% else %}btn-default{% endif %}"
                                     data-asyncdownload>
-                                <span class="fa fa-download"></span> {{ b.text }}
+                                <span class="fa {{ b.icon }}"></span> {{ b.text }}
                             </a>
                         {% endif %}
                     {% endfor %}
