--- a/src/pretix/base/templates/pretixbase/email/plainwrapper.html
+++ b/src/pretix/base/templates/pretixbase/email/plainwrapper.html
@@ -4,17 +4,24 @@
 {% block content %}
     <tr>
         <td class="containertd">
+            <!--[if gte mso 9]>
+                    <table cellpadding="20"><tr><td>
+                <![endif]-->
             <div class="content">
                 {{ body|safe }}
             </div>
+            <!--[if gte mso 9]>
+                    </td></tr></table>
+                <![endif]-->
         </td>
     </tr>
     {% if order %}
-        <tr>
-            <td class="gap"></td>
-        </tr>
+        {% include "pretixbase/email/separator.html" %}
         <tr>
             <td class="order containertd">
+                <!--[if gte mso 9]>
+                    <table cellpadding="20"><tr><td>
+                <![endif]-->
                 <div class="content">
                     {% trans "You are receiving this email because you placed an order for the following event:" %}<br>
                     <strong>{% trans "Event:" %}</strong> {{ event.name }}<br>
@@ -24,18 +31,25 @@
                         {% trans "View order details" %}
                     </a>
                 </div>
+                <!--[if gte mso 9]>
+                    </td></tr></table>
+                <![endif]-->
             </td>
         </tr>
     {% endif %}
 	{% if signature %}
-        <tr>
-            <td class="gap"></td>
-        </tr>
+        {% include "pretixbase/email/separator.html" %}
         <tr>
             <td class="order containertd">
+                <!--[if gte mso 9]>
+                    <table cellpadding="20"><tr><td>
+                <![endif]-->
                 <div class="content">
                     {{ signature | safe }}
                 </div>
+                <!--[if gte mso 9]>
+                    </td></tr></table>
+                <![endif]-->
             </td>
         </tr>
     {% endif %}
