--- a/src/pretix/control/templates/pretixcontrol/event/mail.html
+++ b/src/pretix/control/templates/pretixcontrol/event/mail.html
@@ -1,6 +1,7 @@
 {% extends "pretixcontrol/event/settings_base.html" %}
 {% load i18n %}
 {% load bootstrap3 %}
+{% load static %}
 {% block inside %}
     <form action="" method="post" class="form-horizontal" enctype="multipart/form-data"
           mail-preview-url="{% url "control:event.settings.mail.preview" event=request.event.slug organizer=request.event.organizer.slug %}">
@@ -18,12 +19,13 @@
             <div class="row">
                 {% for r in renderers.values %}
                     <div class="col-md-3">
-                        <div class="well text-center">
+                        <div class="well maildesignpreview text-center">
                             <label class="radio">
                                 <input type="radio" name="mail_html_renderer" value="{{ r.identifier }}"
                                     {% if request.event.settings.mail_html_renderer == r.identifier %}checked{% endif %}>
                                 {{ r.verbose_name }}
                             </label>
+                            <img src="{% static r.thumbnail_filename %}">
                             <a class="btn btn-default btn-sm" target="_blank"
                                 href="{% url "control:event.settings.mail.preview.layout" event=request.event.slug organizer=request.event.organizer.slug %}?renderer={{ r.identifier }}">
                                 {% trans "Preview" %}
