Set line-height

--- a/src/pretix/base/templates/pretixbase/email/base.html
+++ b/src/pretix/base/templates/pretixbase/email/base.html
@@ -32,12 +32,14 @@
             margin-top: 20px;
             margin-bottom: 10px;
             font-size: 22px;
+            line-height: 26px;
         }
 
         .header h1 {
             margin-top: 0;
             margin-bottom: 20px;
             font-size: 26px;
+            line-height: 30px;
         }
 
         .header h2 a, .header h1 a, .content h2 a, .content h3 a {
