--- a/src/pretix/base/templates/pretixbase/email/notification.html
+++ b/src/pretix/base/templates/pretixbase/email/notification.html
@@ -1,15 +1,20 @@
 {% extends "pretixbase/email/base.html" %}
 {% load eventurl %}
 {% load i18n %}
+{% block header %}
+    <h1>
+        {% if notification.url %}<a href="{{ notification.url }}">{% endif %}
+        {{ notification.title }}
+        {% if notification.url %}</a>{% endif %}
+    </h1>
+{% endblock %}
 {% block content %}
     <tr>
         <td class="containertd">
+            <!--[if gte mso 9]>
+                    <table cellpadding="20"><tr><td>
+            <![endif]-->
             <div class="content">
-                <h3>
-                    {% if notification.url %}<a href="{{ notification.url }}">{% endif %}
-                    {{ notification.title }}
-                    {% if notification.url %}</a>{% endif %}
-                </h3>
                 {% if notification.detail %}
                     <p>{{ notification.detail }}</p>
                 {% endif %}
@@ -35,10 +40,17 @@
                     </p>
                 {% endif %}
             </div>
+            <!--[if gte mso 9]>
+                    </td></tr></table>
+            <![endif]-->
         </td>
     </tr>
+    {% include "pretixbase/email/separator.html" %}
     <tr>
         <td class="containertd">
+            <!--[if gte mso 9]>
+                    <table cellpadding="20"><tr><td>
+            <![endif]-->
             <div class="content">
                 {% trans "You receive these emails based on your notification settings." %}<br>
                 <a href="{{ settings_url }}">
@@ -48,6 +60,9 @@
                     {% trans "Click here disable all notifications immediately." %}
                 </a>
             </div>
+            <!--[if gte mso 9]>
+                    </td></tr></table>
+            <![endif]-->
         </td>
     </tr>
 {% endblock %}
