--- a/src/pretix/control/templates/pretixcontrol/event/mail.html
+++ b/src/pretix/control/templates/pretixcontrol/event/mail.html
@@ -1,6 +1,7 @@
 {% extends "pretixcontrol/event/settings_base.html" %}
 {% load i18n %}
 {% load bootstrap3 %}
+{% load static %}
 {% block inside %}
     <form action="" method="post" class="form-horizontal" enctype="multipart/form-data"
           mail-preview-url="{% url "control:event.settings.mail.preview" event=request.event.slug organizer=request.event.organizer.slug %}">
@@ -12,6 +13,27 @@
             {% bootstrap_field form.mail_from layout="control" %}
             {% bootstrap_field form.mail_text_signature layout="control" %}
             {% bootstrap_field form.mail_bcc layout="control" %}
+        </fieldset>
+        <fieldset>
+            <legend>{% trans "E-mail design" %}</legend>
+            <div class="row">
+                {% for r in renderers.values %}
+                    <div class="col-md-3">
+                        <div class="well maildesignpreview text-center">
+                            <label class="radio">
+                                <input type="radio" name="mail_html_renderer" value="{{ r.identifier }}"
+                                    {% if request.event.settings.mail_html_renderer == r.identifier %}checked{% endif %}>
+                                {{ r.verbose_name }}
+                            </label>
+                            <img src="{% static r.thumbnail_filename %}">
+                            <a class="btn btn-default btn-sm" target="_blank"
+                                href="{% url "control:event.settings.mail.preview.layout" event=request.event.slug organizer=request.event.organizer.slug %}?renderer={{ r.identifier }}">
+                                {% trans "Preview" %}
+                            </a>
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
         </fieldset>
         <fieldset>
             <legend>{% trans "E-mail content" %}</legend>
