--- a/src/pretix/base/templates/404.html
+++ b/src/pretix/base/templates/404.html
@@ -9,4 +9,14 @@
     <p class="links">
         <a id='goback' href='#'>{% trans "Take a step back" %}</a>
     </p>
+    {% if request.user.is_staff and not staff_session %}
+        <form action="{% url 'control:user.sudo' %}?next={{ request.path|urlencode }}" method="post">
+            <p>
+                {% csrf_token %}
+                <button type="submit" class="btn btn-default" id="button-sudo">
+                    <i class="fa fa-id-card"></i> {% trans "Admin mode" %}
+                </button>
+            </p>
+        </form>
+    {% endif %}
 {% endblock %}
