--- a/src/pretix/control/templates/pretixcontrol/event/index.html
+++ b/src/pretix/control/templates/pretixcontrol/event/index.html
@@ -43,6 +43,17 @@
                     class="btn btn-primary">{% trans "Show orders pending approval" %}</a>
         </div>
     {% endif %}
+    {% if has_pending_orders_with_full_payment %}
+        <div class="alert alert-warning">
+            {% blocktrans trimmed %}
+                This event contains <strong>fully paid orders</strong> that are not marked as paid, probably
+                because no quota was left at the time their payment arrived. You should review the cases and consider
+                either refunding the customer or creating more space.
+            {% endblocktrans %}
+            <a href="{% url "control:event.orders" event=request.event.slug organizer=request.event.organizer.slug %}?status=pendingpaid"
+                    class="btn btn-primary">{% trans "Show affected orders" %}</a>
+        </div>
+    {% endif %}
     {% if actions|length > 0 %}
         <div class="panel panel-danger">
             <div class="panel-heading">
