--- a/src/pretix/control/templates/pretixcontrol/orders/index.html
+++ b/src/pretix/control/templates/pretixcontrol/orders/index.html
@@ -137,6 +137,8 @@
                                 <span class="label label-warning">{% trans "OVERPAID" %}</span>
                             {% elif o.is_underpaid  %}
                                 <span class="label label-danger">{% trans "UNDERPAID" %}</span>
+                            {% elif o.is_pending_with_full_payment %}
+                                <span class="label label-danger">{% trans "FULLY PAID" %}</span>
                             {% endif %}
                             {{ o.total|money:request.event.currency }}
                         </td>
