--- a/src/pretix/control/templates/pretixcontrol/checkin/index.html
+++ b/src/pretix/control/templates/pretixcontrol/checkin/index.html
@@ -120,6 +120,9 @@
                 <button type="submit" class="btn btn-primary btn-save">
                     {% trans "Check-In selected attendees" %}
                 </button>
+                <button type="submit" class="btn btn-default btn-save" name="revert" value="true">
+                    {% trans "Revert selected check-ins" %}
+                </button>
             {% endif %}
         </form>
         {% include "pretixcontrol/pagination.html" %}
