--- a/src/pretix/control/templates/pretixcontrol/organizers/devices.html
+++ b/src/pretix/control/templates/pretixcontrol/organizers/devices.html
@@ -5,6 +5,23 @@
     <legend>
         {% trans "Connected devices" %}
     </legend>
+    <div class="alert alert-info">
+        {% blocktrans trimmed %}
+            This menu allows you to connect hardware devices such as box office terminals or scanning terminals to
+            your account.
+        {% endblocktrans %}
+        <strong>
+            {% blocktrans trimmed %}
+                Please note that this is a new feature that currently only works for beta-stage software, such as
+                pretixPOS. pretixdroid 1.x and pretixdesk 0.x are not supported by this feature. Future versions of
+                pretixdroid and pretixdesk will be supported through this menu.
+            {% endblocktrans %}
+        </strong>
+        <br><br>
+        {% blocktrans trimmed %}
+            To set up pretixdroid or pretixdesk, please go to the <strong>Check-in devices</strong> section of an event.
+        {% endblocktrans %}
+    </div>
     {% if devices|length == 0 %}
         <div class="empty-collection">
             <p>
