--- a/src/pretix/presale/templates/pretixpresale/event/base.html
+++ b/src/pretix/presale/templates/pretixpresale/event/base.html
@@ -7,6 +7,11 @@
 {% block thetitle %}
     {% block title %}{% endblock %}{% if url_name != "event.index" %} :: {% endif %}{{ event.name }}
 {% endblock %}
+{% block custom_header %}
+    {% if event.settings.meta_noindex %}
+        <meta name="robots" content="noindex, nofollow">
+    {% endif %}
+{% endblock %}
 {% block above %}
     <script type="text/javascript" src="{% static "pretixpresale/js/ui/iframe.js" %}"></script>
     {% if not event.live %}
