Allow to enable ticket downloads for pending orders

--- a/src/pretix/control/templates/pretixcontrol/event/tickets.html
+++ b/src/pretix/control/templates/pretixcontrol/event/tickets.html
@@ -19,6 +19,7 @@
             {% bootstrap_field form.ticket_download_date layout="control" %}
             {% bootstrap_field form.ticket_download_addons layout="control" %}
             {% bootstrap_field form.ticket_download_nonadm layout="control" %}
+            {% bootstrap_field form.ticket_download_pending layout="control" %}
             {% for provider in providers %}
                 <div class="panel panel-default ticketoutput-panel">
                     <div class="panel-heading">
